src/css/index.css
@tailwind base;

@tailwind components;

@tailwind utilities;

@layer components {
  h1 {
    @apply leading-none text-6xl text-mustard font-bebas mt-12 mb-8;
  }
  h2 {
    @apply leading-none text-4xl text-navy font-bebas mt-8 mb-4;
  }
  h3 {
    @apply leading-none text-2xl text-navy font-bebas mt-6 mb-4;
  }
  p {
    @apply my-4 text-midnightBlue;
  }
  li {
    @apply ml-8;
    list-style-type: circle;
  }
  code {
    overflow: hidden;
    background: theme('colors.navy');
    color: #FFFFFF;
    border-radius: theme('borderRadius.sm');
    padding-top: theme('padding.0');
    padding-bottom: theme('padding.0');
    padding-left: theme('padding.1');
    padding-right: theme('padding.1');
    margin-top: theme('margin.0');
    margin-bottom: theme('margin.0');
    margin-left: theme('margin.0');
    margin-right: theme('margin.0');
  }
  pre {
    overflow: hidden;
    background: theme('colors.navy');
    color: #FFFFFF;
    border-radius: theme('borderRadius.sm');
    padding: theme('padding.2');
    margin-top: theme('margin.8');
    margin-bottom: theme('margin.8');
    margin-left: theme('margin.0');
    margin-right: theme('margin.0');
  }

  .text-active {
    color: theme('colors.primary');
  }

  .flex-basis-0 {
    flex-basis: 0;
  }

  .main {
    @apply flex flex-col m-auto;
    margin-top: 3rem;
    max-width: 95%;
    width: 75rem;
  }

  #aloha {
    @apply m-auto mt-64;
    width: 40rem;
  }

  .wave {
    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
    transform: translate3d(0, 0, 0);
  }

  .tags {
    @apply flex flex-row flex-wrap my-10;
  }
}

@keyframes wave {
  0% {
    margin-left: 0;
  }
  100% {
    margin-left: -1600px;
  }
}

